# scrabble

./: CMakeLists.txt  Makefile  README.md  diagrama.wsd  main  main.cpp  makefile.txt  nul  prueba.csv  prueba1.csv
.qodo/: history.sqlite
include/: Archivo.h  Casilla.h  Ficha.h  Game.h  Jugador.h  ManejadorFichas.h  Reporte.h  Tablero.h
include/estructuras/: LinkedList.h  Queue.h  Stack.h
include/utilidades/: Utilidad.h
src/: Archivo.cpp  Casilla.cpp  Casilla.tpp  Ficha.cpp  Ficha.tpp  Game.cpp  Game.tpp  Jugador.cpp  Jugador.tpp  ManejadorFichas.cpp  ManejadorFichas.tpp  Tablero.cpp  Tablero.tpp
src/estructuras/: LinkedList.cpp  LinkedList.tpp  Queue.cpp  Queue.tpp  Stack.cpp  Stack.tpp
src/utilidades/: Utilidad.cpp  Utilidad.tpp
